changed name to few resources and assets. Images will now change color accordingly to system theme setting (light or dark), granted a resource with needed version of image asset exists.
Custom fonts added

--- a/Biancolatte/Views/es.lproj/Localizable.strings
+++ b/Biancolatte/Views/es.lproj/Localizable.strings
@@ -5,8 +5,8 @@
   Created by Alessandro Zanin on 12/02/23.
   
 */
-"Casa" = "Hogar";
-"Trovaci" = "Encuéntranos";
-"Sconosciuto" = "Desconocido";
-"Profilo" = "Profil";
-"Le nostre location" = "Nuestras ubicaciones";
+"Home" = "Hogar";
+"Find Us" = "Encuéntranos";
+"Unknown" = "Desconocido";
+"Profile" = "Profil";
+"Our Locations" = "Nuestras ubicaciones";
