--- a/Biancolatte/Views/en.lproj/Localizable.strings
+++ b/Biancolatte/Views/en.lproj/Localizable.strings
@@ -5,8 +5,8 @@
   Created by Alessandro Zanin on 12/02/23.
   
 */
-"Casa" = "Home";
-"Trovaci" = "Find Us";
-"Sconosciuto" = "Unknown";
-"Profilo" = "Profile";
-"Le nostre location" = "Our Locations";
+"Home" = "Home";
+"Find Us" = "Find Us";
+"Unknown" = "Unknown";
+"Profile" = "Profile";
+"Our Locations" = "Our Locations";
