Added scaled up lion logo for tabor but its terribly low quality, will replace

--- a/Biancolatte/Views/en.lproj/Localizable.strings
+++ b/Biancolatte/Views/en.lproj/Localizable.strings
@@ -9,4 +9,4 @@
 "Find Us" = "Find Us";
 "Unknown" = "Unknown";
 "Profile" = "Profile";
-"Our Locations" = "Our Locations";
+"Our Locations" = "OUR LOCATIONS";
