--- a/Biancolatte/Views/es.lproj/Localizable.strings
+++ b/Biancolatte/Views/es.lproj/Localizable.strings
@@ -9,4 +9,4 @@
 "Find Us" = "Encuéntranos";
 "Unknown" = "Desconocido";
 "Profile" = "Profil";
-"Our Locations" = "Nuestras ubicaciones";
+"Our Locations" = "NUESTRAS UBICACIONES";
