Tapping on a biancolatte location on the map will present the user with a sheet, which will show the location name, address, and useful links such as maps link, website link and google maps link

--- a/Biancolatte/Views/es.lproj/Localizable.strings
+++ b/Biancolatte/Views/es.lproj/Localizable.strings
@@ -10,3 +10,5 @@
 "Unknown" = "Desconocido";
 "Profile" = "Profil";
 "Our Locations" = "NUESTRAS UBICACIONES";
+"Maps" = "Mapas";
+"Website" = "Sitio web";
